--- a/css/main.css
+++ b/css/main.css
@@ -63,6 +63,11 @@ button > span {
   color: #FFF;
   box-shadow: 0 3px rgba(50, 50, 50, 0.3);
 }
+.button--modal {
+  display: block;
+  margin: 0 auto;
+  margin-top: 30px;
+}
 
 .logo__web {
   color: #2196F3;
@@ -549,7 +554,8 @@ button > span {
 .modal--is-hidden .modal__form {
   transform: translate(-50%, -50%) scale(0);
 }
-.modal__form {
+
+.modal-form {
   max-width: 528px;
   position: absolute;
   top: 50%;
@@ -563,29 +569,29 @@ button > span {
   transform: translate(-50%, -50%) scale(1);
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1) 1000ms;
 }
-.modal__close {
+.modal-form__close {
   position: absolute;
   top: 10px;
   right: 10px;
-  height: 30px;
-  width: 30px;
-  border-color: rgba(0, 0, 0, 0.1);
+  height: 32px;
+  width: 32px;
+  border-color: rgba(0, 0, 0, 0.15);
   border-width: 1px;
   border-style: solid;
   border-radius: 50%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
   cursor: pointer;
-  transition-property: background-color, color, box-shadow;
+  transition-property: background-color, color, box-shadow, border-color;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-delay: 0;
 }
-.modal__close:hover .modal__icon {
+.modal-form__close:hover {
+  border-color: #2196F3;
+}
+.modal-form__close:hover .modal-form__icon {
   fill: #2196F3;
 }
-.modal__header {
+.modal-form__header {
   font-family: "Roboto";
   font-size: 20px;
   font-weight: 700;
@@ -593,7 +599,7 @@ button > span {
   letter-spacing: 3%;
   padding-bottom: 10px;
 }
-.modal__label {
+.modal-form__label {
   display: flex;
   flex-direction: column;
   position: relative;
@@ -602,17 +608,17 @@ button > span {
   font-weight: 400;
   color: #757575;
 }
-.modal__label:has(input:focus) svg {
+.modal-form__label:has(input:focus) svg {
   fill: #2196F3;
 }
-.modal__icon {
+.modal-form__icon {
   position: absolute;
   top: 50%;
   left: 10px;
   transform: translateY(-50%);
   fill: #212121;
 }
-.modal__input {
+.modal-form__input {
   margin-bottom: 14px;
   padding: 10px 30px;
   border-color: rgba(33, 33, 33, 0.2);
@@ -623,13 +629,12 @@ button > span {
   transition-property: background-color, color, box-shadow;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  transition-delay: 0;
 }
-.modal__input:focus {
+.modal-form__input:focus {
   border-color: #2196F3;
   outline: none;
 }
-.modal__checkbox-text {
+.modal-form__checkbox-text {
   font-family: "Roboto";
   font-size: 14px;
   font-weight: 400;
@@ -639,7 +644,7 @@ button > span {
   display: flex;
   align-items: center;
 }
-.modal__checkbox {
+.modal-form__checkbox {
   -webkit-appearance: none;
      -moz-appearance: none;
           appearance: none;
@@ -650,31 +655,15 @@ button > span {
   margin-right: 9px;
   border-radius: 2px;
 }
-.modal__checkbox:checked::after {
+.modal-form__checkbox:checked::after {
   content: "";
   position: absolute;
   width: 16px;
   height: 15px;
   background-image: url("../images/icons/check.svg");
 }
-.modal__checkbox-link {
+.modal-form__checkbox-link {
   color: #2196F3;
   text-decoration: underline;
   padding-left: 4px;
-}
-.modal__btn {
-  display: block;
-  padding: 10px 20px;
-  background-color: #2196F3;
-  color: #FFFFFF;
-  margin: 0 auto;
-  border-radius: 5px;
-  cursor: pointer;
-  border: none;
-  font-family: "Roboto";
-  font-size: 16px;
-  font-weight: 700;
-  letter-spacing: 6%;
-  line-height: 1.9;
-  margin-top: 30px;
 }/*# sourceMappingURL=main.css.map */
