--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -63,6 +63,11 @@ button > span {
   color: #FFF;
   box-shadow: 0 3px rgba(50, 50, 50, 0.3);
 }
+.button--modal {
+  display: block;
+  margin: 0 auto;
+  margin-top: 30px;
+}
 
 .social-list {
   display: flex;
