--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -1,3 +1,4 @@
+
 .button {
     color: $white;
     font-size: 16px;
@@ -32,6 +33,13 @@
         color: #FFF;
         box-shadow: 0 3px rgba(50, 50, 50, 0.3);
     }
+
+&--modal {
+    display: block;
+    margin: 0 auto;
+    margin-top: 30px;
+
+}
 
 }
 
