--- a/sass/portfolio.scss
+++ b/sass/portfolio.scss
@@ -1,4 +1,6 @@
 @import "./base/variables";
+@import "./utils/placeholders.scss";
+@import "./utils/mixins.scss";
 @import "./base/common";
 @import "./components/button";
 @import "./components/social";
