--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,20 @@
+.header-spacer, .header__container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.modal-form__checkbox-text, .header-contact__link {
+  display: flex;
+  align-items: center;
+}
+
+.clients-list__link, .clients-list, .social-list__link, .social-list {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 body {
   font-family: "Roboto", sans-serif;
   font-weight: 400;
@@ -33,10 +50,10 @@ button > span {
 .button {
   color: white;
   font-size: 16px;
-  font-family: Roboto;
-  font-weight: 700;
-  line-height: 1.87;
   letter-spacing: 0.96px;
+  line-height: 1.87;
+  font-weight: 700;
+  font-family: Roboto;
   word-wrap: break-word;
   border: 0;
   padding: 10px 32px;
@@ -46,9 +63,10 @@ button > span {
   cursor: pointer;
 }
 .button--filters {
-  font-weight: 500;
-  line-height: 1.625;
+  font-size: inherit;
   letter-spacing: 3%;
+  line-height: 1.625;
+  font-weight: 500;
   text-align: center;
   color: #212121;
   padding: 6px 22px;
@@ -70,19 +88,21 @@ button > span {
 }
 
 .logo__web {
-  color: #2196F3;
   font-size: 26px;
-  font-family: Raleway;
-  font-weight: 700;
   letter-spacing: 0.78px;
+  line-height: normal;
+  font-weight: 700;
+  font-family: Raleway;
   word-wrap: break-word;
+  color: #2196F3;
   margin-right: -5px;
 }
 .logo__studio {
   font-size: 26px;
-  font-family: Raleway;
-  font-weight: 700;
   letter-spacing: 0.78px;
+  line-height: normal;
+  font-weight: 700;
+  font-family: Raleway;
   word-wrap: break-word;
 }
 .logo__studio--header {
@@ -93,32 +113,19 @@ button > span {
   padding: 25px 0;
   border-bottom: #ECECEC 1px solid;
 }
-.header__container {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-
-.header-spacer {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-
 .header-contact {
-  display: flex;
   font-size: 14px;
-  font-family: Roboto;
-  font-weight: 500;
   letter-spacing: 0.28px;
+  line-height: normal;
+  font-weight: 500;
+  font-family: Roboto;
   word-wrap: break-word;
+  display: flex;
   -moz-column-gap: 50px;
        column-gap: 50px;
 }
 .header-contact__link {
-  display: flex;
   gap: 10px;
-  align-items: center;
   transition-property: color;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
@@ -137,12 +144,13 @@ button > span {
 }
 
 .navigation {
-  color: #212121;
   font-size: 14px;
-  font-family: Roboto;
-  font-weight: 500;
   letter-spacing: 0.28px;
+  line-height: normal;
+  font-weight: 500;
+  font-family: Roboto;
   word-wrap: break-word;
+  color: #212121;
 }
 
 .navigation-list {
@@ -153,9 +161,10 @@ button > span {
 }
 .navigation-list__link {
   font-size: 14px;
-  font-family: Roboto;
-  font-weight: 500;
   letter-spacing: 0.28px;
+  line-height: normal;
+  font-weight: 500;
+  font-family: Roboto;
   word-wrap: break-word;
   position: relative;
   transition-property: color;
@@ -213,14 +222,14 @@ button > span {
   background-size: cover;
 }
 .hero__title {
-  color: white;
   font-size: 44px;
-  font-family: Roboto;
-  font-weight: 900;
-  text-transform: uppercase;
-  line-height: 1.36;
   letter-spacing: 2.64px;
+  line-height: 1.36;
+  font-weight: 900;
+  font-family: Roboto;
   word-wrap: break-word;
+  color: white;
+  text-transform: uppercase;
   margin-bottom: 30px;
 }
 
@@ -254,22 +263,22 @@ button > span {
   background: url("../images/astronaut1.svg") no-repeat 50% 50%/70px 70px #F5F4FA;
 }
 .feature-list__title {
-  color: #212121;
   font-size: 14px;
-  font-family: Roboto;
-  font-weight: 700;
-  text-transform: uppercase;
-  letter-spacing: 0.42px;
-  word-wrap: break-word;
+  letter-spacing: normal;
   line-height: 1.17;
+  font-weight: 700;
+  font-family: Roboto;
+  word-wrap: break-word;
+  color: #212121;
+  text-transform: uppercase;
   margin-bottom: 10px;
 }
 .feature-list__text {
   font-size: 14px;
-  font-family: Roboto;
+  letter-spacing: normal;
+  line-height: normal;
   font-weight: 400;
-  line-height: 1.71;
-  letter-spacing: 0.42px;
+  font-family: Roboto;
   word-wrap: break-word;
 }
 
@@ -280,12 +289,13 @@ button > span {
   text-align: center;
 }
 .box__title {
-  color: #212121;
   font-size: 36px;
-  font-family: Roboto;
-  font-weight: 700;
   letter-spacing: 1.08px;
+  line-height: normal;
+  font-weight: 700;
+  font-family: Roboto;
   word-wrap: break-word;
+  color: #212121;
   margin-bottom: 50px;
 }
 
@@ -304,6 +314,10 @@ button > span {
   max-width: 100%;
 }
 .box-list__caption {
+  font-size: 14px;
+  letter-spacing: normal;
+  line-height: normal;
+  font-weight: 700;
   position: absolute;
   z-index: 5;
   left: 0;
@@ -314,23 +328,15 @@ button > span {
   background-color: rgba(47, 48, 58, 0.8);
   text-transform: uppercase;
   bottom: 0;
-  font-size: 14px;
-  font-weight: 700;
 }
 
 .social-list {
-  display: flex;
-  align-items: center;
-  justify-content: center;
   gap: 10px;
 }
 .social-list--footer {
   justify-content: left;
 }
 .social-list__link {
-  display: flex;
-  align-items: center;
-  justify-content: center;
   width: 44px;
   height: 44px;
   border-radius: 50%;
@@ -369,12 +375,13 @@ button > span {
   text-align: center;
 }
 .team__main-title {
-  color: #212121;
   font-size: 36px;
-  font-family: Roboto;
-  font-weight: 700;
   letter-spacing: 1.08px;
+  line-height: normal;
+  font-weight: 700;
+  font-family: Roboto;
   word-wrap: break-word;
+  color: #212121;
   margin-bottom: 50px;
 }
 
@@ -393,54 +400,54 @@ button > span {
   margin-bottom: 30px;
 }
 .team-list__title {
-  color: #212121;
   font-size: 16px;
-  font-family: Roboto;
-  font-weight: 500;
   letter-spacing: 0.48px;
+  line-height: normal;
+  font-weight: 500;
+  font-family: Roboto;
   word-wrap: break-word;
+  color: #212121;
   margin-bottom: 10px;
 }
 .team-list__text {
   font-size: 16px;
-  font-family: Roboto;
-  font-weight: 400;
   letter-spacing: 0.48px;
+  line-height: normal;
+  font-weight: 400;
+  font-family: Roboto;
   word-wrap: break-word;
   margin-bottom: 16px;
 }
 
 .clients {
+  font-family: Roboto;
+  word-wrap: break-word;
   padding-top: 73px;
   padding-bottom: 94px;
+  font-size: 14px;
 }
 .clients__container {
   text-align: center;
 }
 .clients__title {
-  color: #212121;
   font-size: 36px;
-  font-family: Roboto;
-  font-weight: 700;
   letter-spacing: 1.08px;
+  line-height: normal;
+  font-weight: 700;
+  font-family: Roboto;
   word-wrap: break-word;
+  color: #212121;
   margin-bottom: 50px;
 }
 
 .clients-list {
-  display: flex;
   gap: 30px;
-  align-items: center;
-  justify-content: center;
 }
 .clients-list__link {
   border: #AFB1B8 solid 1px;
   border-radius: 4px;
-  display: flex;
   height: 92px;
   width: 170px;
-  align-items: center;
-  justify-content: center;
   transition-property: border-color;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
@@ -474,13 +481,13 @@ button > span {
 }
 
 .address {
-  color: rgba(255, 255, 255, 0.6);
   font-size: 14px;
-  font-family: Roboto;
-  font-weight: 400;
+  letter-spacing: normal;
   line-height: 1.71;
-  letter-spacing: 0.42px;
+  font-weight: 400;
+  font-family: Roboto;
   word-wrap: break-word;
+  color: rgba(255, 255, 255, 0.6);
 }
 .address__city {
   color: white;
@@ -491,12 +498,13 @@ button > span {
   flex-basis: 25%;
 }
 .footer-join__title {
-  color: white;
   font-size: 14px;
-  font-family: Roboto;
+  letter-spacing: normal;
+  line-height: normal;
   font-weight: 700;
-  line-height: 1.71;
-  letter-spacing: 0.42px;
+  font-family: Roboto;
+  word-wrap: break-word;
+  color: white;
   text-transform: uppercase;
   margin-bottom: 20px;
 }
@@ -505,12 +513,13 @@ button > span {
   flex-basis: 50%;
 }
 .footer-subscribe__title {
-  color: white;
   font-size: 14px;
-  font-family: Roboto;
+  letter-spacing: normal;
+  line-height: normal;
   font-weight: 700;
-  line-height: 1.71;
-  letter-spacing: 0.42px;
+  font-family: Roboto;
+  word-wrap: break-word;
+  color: white;
   text-transform: uppercase;
 }
 
@@ -519,12 +528,14 @@ button > span {
   display: flex;
 }
 .footer-form__input {
+  font-size: 16px;
+  letter-spacing: normal;
+  line-height: 1.25;
+  font-weight: normal;
   background: transparent;
   border: 1px solid rgba(255, 255, 255, 0.3);
   border-radius: 4px;
   padding: 16px;
-  font-size: 16px;
-  line-height: 1.25;
   margin-right: 12px;
   color: rgba(255, 255, 255, 0.6);
   flex-basis: 60%;
@@ -592,20 +603,25 @@ button > span {
   fill: #2196F3;
 }
 .modal-form__header {
-  font-family: "Roboto";
   font-size: 20px;
-  font-weight: 700;
-  color: #212121;
   letter-spacing: 3%;
+  line-height: normal;
+  font-weight: 700;
+  font-family: Raleway;
+  word-wrap: normal;
+  color: #212121;
   padding-bottom: 10px;
 }
 .modal-form__label {
+  font-size: 12px;
+  letter-spacing: normal;
+  line-height: normal;
+  font-weight: 400;
+  font-family: Roboto;
+  word-wrap: normal;
   display: flex;
   flex-direction: column;
   position: relative;
-  font-family: "Roboto";
-  font-size: 12px;
-  font-weight: 400;
   color: #757575;
 }
 .modal-form__label:has(input:focus) svg {
@@ -635,14 +651,13 @@ button > span {
   outline: none;
 }
 .modal-form__checkbox-text {
-  font-family: "Roboto";
   font-size: 14px;
-  font-weight: 400;
-  color: #757575;
   letter-spacing: 0.7px;
   line-height: 1.71;
-  display: flex;
-  align-items: center;
+  font-weight: 400;
+  font-family: Roboto;
+  word-wrap: break-word;
+  color: #757575;
 }
 .modal-form__checkbox {
   -webkit-appearance: none;
