--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -1,12 +1,9 @@
 
 .button {
     color: $white;
-    font-size: 16px;
-    font-family: Roboto;
-    font-weight: 700;
-    line-height: 1.87;
-    letter-spacing: 0.96px;
-    word-wrap: break-word;
+    @include font4(16px, 0.96px,  1.87,  700);
+    @include font2(Roboto, break-word);
+ 
     border: 0;
     padding: 10px 32px;
     border-radius: 4px;
@@ -15,9 +12,7 @@
     cursor: pointer;
     
     &--filters {
-        font-weight: 500;
-        line-height: 1.625;
-        letter-spacing: 3%;
+        @include font4 (inherit, 3%, 1.625, 500);
         text-align: center;
         color: $gray-text;
         padding: 6px 22px;
