--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -3,31 +3,27 @@
     border-bottom: #ECECEC 1px solid;
 
     &__container {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
+      @extend %flex-between-center;
     }
 }
 
 .header-spacer {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+    @extend %flex-between-center;
 }
 
 .header-contact {
+    @include font4(14px, 0.28px, normal, 500);
+    @include font2(Roboto, break-word);
     display: flex;
-    font-size: 14px;
-    font-family: Roboto;
-    font-weight: 500;
-    letter-spacing: 0.28px;
-    word-wrap: break-word;
+
+
+
     column-gap: 50px;
 
     &__link {
-        display: flex;
+     @extend %flex-center;
         gap: 10px;
-        align-items: center;
+  
         transition-property: color;
         transition-duration: 250ms;
         transition-timing-function: $cubic;
