--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -66,21 +66,18 @@
     }
 
     &__header {
-        font-family: 'Roboto';
-        font-size: 20px;
-        font-weight: 700;
+        @include font4(20px, 3%, normal, 700);
+        @include font2(Raleway, normal);
         color: $gray-text;
-        letter-spacing: 3%;
         padding-bottom: 10px;
     }
 
     &__label {
+        @include font4(12px, normal, normal, 400);
+        @include font2(Roboto, normal);
         display: flex;
         flex-direction: column;
         position: relative;
-        font-family: 'Roboto';
-        font-size: 12px;
-        font-weight: 400;
         color: $main-text;
     }
 
@@ -115,15 +112,11 @@
     }
 
     &__checkbox-text {
-        font-family: 'Roboto';
-        font-size: 14px;
-        font-weight: 400;
+        @extend %flex-center;
+        @include font4(14px, 0.7px, 1.71, 400);
+        @include font2(Roboto, break-word);
         color: $main-text;
-        letter-spacing: 0.7px;
-        line-height: 1.71;
-        display: flex;
-        align-items: center;
-
+     
     }
 
     &__checkbox {
