--- a/sass/components/_navi.scss
+++ b/sass/components/_navi.scss
@@ -1,10 +1,7 @@
 .navigation {
+    @include font4(14px, 0.28px, normal, 500);
+    @include font2(Roboto, break-word);
     color: $gray-text;
-    font-size: 14px;
-    font-family: Roboto;
-    font-weight: 500;
-    letter-spacing: 0.28px;
-    word-wrap: break-word;
 }
 
 .navigation-list {
@@ -15,11 +12,8 @@
     }
 
     &__link {
-        font-size: 14px;
-        font-family: Roboto;
-        font-weight: 500;
-        letter-spacing: 0.28px;
-        word-wrap: break-word;
+        @include font4(14px, 0.28px, normal, 500);
+        @include font2(Roboto, break-word);
         position: relative;
         transition-property: color;
         transition-duration: 250ms;
