--- a/sass/components/_section-hero.scss
+++ b/sass/components/_section-hero.scss
@@ -10,14 +10,10 @@
     background-size: cover;
 
     &__title {
+        @include font4(44px, 2.64px, 1.36, 900);
+        @include font2(Roboto, break-word);
         color: $white;
-        font-size: 44px;
-        font-family: Roboto;
-        font-weight: 900;
         text-transform: uppercase;
-        line-height: 1.36;
-        letter-spacing: 2.64px;
-        word-wrap: break-word;
         margin-bottom: 30px;
     }
 }
