--- a/sass/components/_section-team.scss
+++ b/sass/components/_section-team.scss
@@ -5,24 +5,23 @@
     &__container {
         text-align: center;
     }
+
     &__main-title {
+        @include font4(36px, 1.08px, normal, 700);
+        @include font2(Roboto, break-word);
         color: $gray-text;
-        font-size: 36px;
-        font-family: Roboto;
-        font-weight: 700;
-        letter-spacing: 1.08px;
-        word-wrap: break-word;
         margin-bottom: 50px;
     }
 
 }
-.team-list {
-    
-        display: flex;
-        justify-content: space-between;
-    
 
-   
+.team-list {
+
+    display: flex;
+    justify-content: space-between;
+
+
+
 
     &__item {
         background-color: #FFF;
@@ -37,21 +36,15 @@
     }
 
     &__title {
+        @include font4 (16px, 0.48px, normal, 500);
+        @include font2(Roboto, break-word);
         color: $gray-text;
-        font-size: 16px;
-        font-family: Roboto;
-        font-weight: 500;
-        letter-spacing: 0.48px;
-        word-wrap: break-word;
         margin-bottom: 10px;
     }
 
     &__text {
-        font-size: 16px;
-        font-family: Roboto;
-        font-weight: 400;
-        letter-spacing: 0.48px;
-        word-wrap: break-word;
+        @include font4 (16px, 0.48px, normal, 400);
+        @include font2(Roboto, break-word);
         margin-bottom: 16px;
     }
 
