--- a/sass/components/_social.scss
+++ b/sass/components/_social.scss
@@ -1,7 +1,5 @@
 .social-list {
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    @extend %flex-center-center;
     gap: 10px;
 
     &--footer {
@@ -9,9 +7,7 @@
     }
 
     &__link {
-        display: flex;
-        align-items: center;
-        justify-content: center;
+        @extend %flex-center-center;
         width: 44px;
         height: 44px;
         border-radius: 50%;
