--- a/css/main.css
+++ b/css/main.css
@@ -47,6 +47,76 @@ button > span {
   overflow: hidden;
 }
 
+.navigation {
+  font-size: 14px;
+  letter-spacing: 0.28px;
+  line-height: normal;
+  font-weight: 500;
+  font-family: Roboto;
+  word-wrap: break-word;
+  color: #212121;
+}
+
+.navigation-list {
+  display: flex;
+}
+.navigation-list__item {
+  margin-left: 50px;
+}
+.navigation-list__link {
+  font-size: 14px;
+  letter-spacing: 0.28px;
+  line-height: normal;
+  font-weight: 500;
+  font-family: Roboto;
+  word-wrap: break-word;
+  position: relative;
+  transition-property: color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+.navigation-list__link::after {
+  content: "";
+  position: absolute;
+  top: 33px;
+  left: 0;
+  border-bottom: 4px solid #2196F3;
+  border-radius: 2px;
+  height: 100%;
+  width: 0;
+  transition: all 0.5s;
+}
+.navigation-list__link:hover:after {
+  /* width: 100%; */
+  animation: navigation_underline 500ms cubic-bezier(0.25, 0.25, 0.695, 0.49) 0s 1 normal forwards;
+}
+.navigation-list__link:hover {
+  color: #2196F3;
+}
+.navigation-list__item--active {
+  color: #2196F3;
+}
+.navigation-list__item--active .navigation-list__link::after {
+  width: 100%;
+}
+
+@keyframes navigation_underline {
+  0% {
+    width: 0;
+  }
+  25% {
+    width: 25%;
+  }
+  50% {
+    width: 50%;
+  }
+  75% {
+    width: 75%;
+  }
+  100% {
+    width: 100%;
+  }
+}
 .button {
   color: white;
   font-size: 16px;
@@ -143,76 +213,6 @@ button > span {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.navigation {
-  font-size: 14px;
-  letter-spacing: 0.28px;
-  line-height: normal;
-  font-weight: 500;
-  font-family: Roboto;
-  word-wrap: break-word;
-  color: #212121;
-}
-
-.navigation-list {
-  display: flex;
-}
-.navigation-list__item {
-  margin-left: 50px;
-}
-.navigation-list__link {
-  font-size: 14px;
-  letter-spacing: 0.28px;
-  line-height: normal;
-  font-weight: 500;
-  font-family: Roboto;
-  word-wrap: break-word;
-  position: relative;
-  transition-property: color;
-  transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-}
-.navigation-list__link::after {
-  content: "";
-  position: absolute;
-  top: 33px;
-  left: 0;
-  border-bottom: 4px solid #2196F3;
-  border-radius: 2px;
-  height: 100%;
-  width: 0;
-  transition: all 0.5s;
-}
-.navigation-list__link:hover:after {
-  /* width: 100%; */
-  animation: navigation_underline 500ms cubic-bezier(0.25, 0.25, 0.695, 0.49) 0s 1 normal forwards;
-}
-.navigation-list__link:hover {
-  color: #2196F3;
-}
-.navigation-list__item--active {
-  color: #2196F3;
-}
-.navigation-list__item--active .navigation-list__link::after {
-  width: 100%;
-}
-
-@keyframes navigation_underline {
-  0% {
-    width: 0;
-  }
-  25% {
-    width: 25%;
-  }
-  50% {
-    width: 50%;
-  }
-  75% {
-    width: 75%;
-  }
-  100% {
-    width: 100%;
-  }
-}
 .hero {
   padding: 200px 0;
   text-align: center;
@@ -681,4 +681,208 @@ button > span {
   color: #2196F3;
   text-decoration: underline;
   padding-left: 4px;
+}
+
+.menu-button {
+  display: none;
+}
+
+@media screen and (max-width: 480px) {
+  div.container {
+    width: 100%;
+  }
+  .header {
+    padding: 15px 0;
+  }
+  .header-contact {
+    display: none;
+  }
+  .menu-button {
+    width: 24px;
+    height: 24px;
+    position: relative;
+    z-index: 10;
+    overflow: hidden;
+    border: none;
+    background: transparent;
+    cursor: pointer;
+    margin-right: 22px;
+    border-bottom: 3px solid #000000;
+    display: block;
+  }
+  .menu-button:before,
+  .menu-button:after {
+    content: "";
+    width: 24px;
+    height: 3px;
+    position: absolute;
+    transform: translate(-50%, -50%);
+    background-color: #000000;
+    transition: transform 0.5s;
+  }
+  .menu-button:before {
+    top: 30%;
+  }
+  .menu-button:after {
+    top: 68%;
+  }
+  /* Change menu icon */
+  .menu-button.active {
+    border-bottom: none;
+  }
+  .menu-button.active:before {
+    top: 50%;
+    transform: translate(-50%, 0%) rotate(45deg);
+  }
+  .menu-button.active:after {
+    top: 50%;
+    transform: translate(-50%, 0%) rotate(-45deg);
+  }
+  .navigation {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    background-color: #FFEFBA;
+    transform: translateY(-100%);
+    transition: transform 0.5s;
+  }
+  .navigation__link {
+    color: #222;
+    font-size: 20px;
+    font-family: Arial, Helvetica, sans-serif;
+    text-decoration: none;
+  }
+  .navigation.active {
+    transform: translateY(0);
+    z-index: 5;
+  }
+  .navigation-list {
+    display: flex;
+    flex-direction: column;
+    gap: 50px;
+    padding-top: 50px;
+    padding-bottom: 50px;
+    font-size: 24px;
+  }
+  .navigation-list__item--active .navigation-list__link::after {
+    width: 0;
+  }
+  .navigation-list__link {
+    font-size: 24px;
+  }
+  .hero {
+    padding: 125px 0;
+  }
+  .hero__title {
+    font-size: 26px;
+    letter-spacing: 6%;
+    line-height: 1.61;
+    font-weight: 900;
+  }
+  .feature {
+    padding: 60px 0;
+  }
+  .feature-list {
+    flex-direction: column;
+    gap: 40px;
+  }
+  .feature-list__item {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+  }
+  .feature-list__item::before {
+    width: 100%;
+  }
+  .box {
+    display: none;
+  }
+  .team {
+    padding: 60px 0;
+  }
+  .team__main-title {
+    font-size: 28px;
+    letter-spacing: 0.84px;
+    line-height: normal;
+    font-weight: 700;
+    margin-bottom: 28px;
+  }
+  .team-list {
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
+    gap: 30px;
+  }
+  .team-list__img {
+    width: 100%;
+  }
+  .clients {
+    padding: 60px 0;
+  }
+  .clients__title {
+    font-size: 28px;
+    letter-spacing: 0.84px;
+    line-height: normal;
+    font-weight: 700;
+    margin-bottom: 28px;
+  }
+  .clients-list {
+    flex-wrap: wrap;
+  }
+  .footer__container {
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    gap: 60px;
+  }
+  .address {
+    text-align: center;
+  }
+  .footer-contacts,
+  .footer-subscribe,
+  .footer-join {
+    text-align: center;
+    flex-basis: 100%;
+  }
+  .footer-subscribe {
+    width: 100%;
+  }
+  .footer-form {
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
+  }
+  .footer-form__input {
+    width: 100%;
+    margin-right: 0;
+  }
+  .modal-form {
+    width: 98%;
+    min-width: 320px;
+  }
+  .modal-form__header {
+    text-align: center;
+    line-height: 30px;
+    letter-spacing: 0.6px;
+  }
+  .modal-form__checkbox-text {
+    font-size: 12px;
+    letter-spacing: 0.36px;
+    display: inline;
+    vertical-align: middle;
+  }
+  .portfolio {
+    padding: 60px 0;
+  }
+  .portfolio-list {
+    display: flex;
+    flex-direction: column;
+    align-items: normal;
+  }
+  .portfolio__filters-list {
+    display: flex;
+    flex-wrap: wrap;
+  }
 }/*# sourceMappingURL=main.css.map */
