--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -427,7 +427,7 @@ button > span {
   display: none;
 }
 
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 767px) {
   div.container {
     width: 100%;
   }
@@ -624,5 +624,137 @@ button > span {
   .portfolio__filters-list {
     display: flex;
     flex-wrap: wrap;
+  }
+}
+@media screen and (min-width: 768px) and (max-width: 1200px) {
+  div.container {
+    width: 100%;
+  }
+  .header {
+    padding: 18px 0;
+  }
+  .header-contact {
+    flex-direction: column;
+    gap: 10px;
+  }
+  .hero {
+    padding: 100px;
+  }
+  .hero__title {
+    font-size: 26px;
+    letter-spacing: 1.56px;
+    line-height: 1.61;
+    font-weight: 800;
+  }
+  .feature {
+    padding: 60px 0;
+  }
+  .feature-list {
+    flex-wrap: wrap;
+  }
+  .feature-list__item {
+    flex-basis: calc((100% - 30px) / 2);
+  }
+  .feature-list__item::before {
+    width: 100%;
+  }
+  .feature-list__text {
+    margin-bottom: 30px;
+  }
+  .box {
+    display: none;
+  }
+  .team {
+    padding: 60px 0;
+  }
+  .team__main-title {
+    font-size: 28px;
+    letter-spacing: 0.84px;
+    line-height: normal;
+    font-weight: 600;
+  }
+  .team-list {
+    flex-wrap: wrap;
+    gap: 30px;
+  }
+  .team-list__item {
+    flex-basis: calc((100% - 30px) / 2);
+  }
+  .team-list__img {
+    width: 100%;
+  }
+  .clients {
+    padding: 60px 0;
+  }
+  .clients__title {
+    font-size: 28px;
+    letter-spacing: 0.84px;
+    line-height: normal;
+    font-weight: 600;
+    margin-bottom: 30px;
+  }
+  .clients-list {
+    gap: 30px;
+    flex-wrap: wrap;
+  }
+  .clients-list__item {
+    flex-basis: calc((100% - 60px) / 3);
+  }
+  .clients-list__link {
+    width: 100%;
+  }
+  .footer__container {
+    flex-wrap: wrap;
+    gap: 60px;
+  }
+  .footer-contacts,
+  .footer-join {
+    flex-basis: calc((100% - 60px) / 2);
+    align-items: center;
+    justify-content: center;
+    display: flex;
+    flex-direction: column;
+  }
+  .address {
+    text-align: center;
+  }
+  .footer-subscribe {
+    flex-basis: 100%;
+  }
+  .footer-subscribe__title {
+    text-align: center;
+  }
+  .footer-form {
+    gap: 20px;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+  }
+  .footer-form__input {
+    width: 450px;
+  }
+  .modal-form {
+    min-width: 450px;
+  }
+  .modal-form__header {
+    text-align: center;
+    line-height: 30px;
+    letter-spacing: 0.6px;
+    font-family: "Roboto";
+  }
+  .modal-form__checkbox-text {
+    font-size: 12px;
+    letter-spacing: 0.36px;
+    display: inline;
+    vertical-align: middle;
+  }
+  .portfolio {
+    padding: 60px 0;
+  }
+  .portfolio__filters {
+    padding-bottom: 30px;
+  }
+  .portfolio-list__item {
+    flex-basis: calc((100% - 60px) / 2);
   }
 }/*# sourceMappingURL=portfolio.css.map */
