--- a/sass/portfolio.scss
+++ b/sass/portfolio.scss
@@ -10,5 +10,6 @@
 @import "./components/portfolio";
 @import "./components/footer";
 @import "./components/mobile";
+@import "./components/tablet";
 
 
