--- a/sass/main.scss
+++ b/sass/main.scss
@@ -4,6 +4,7 @@
 @import "./base/common";
 @import "./components/navi";
 @import "./components/button";
+@import "./components/menu-button";
 @import "./components/logo";
 @import "./components/header";
 @import "./components/section-hero";
@@ -14,5 +15,6 @@
 @import "./components/section-clients";
 @import "./components/footer";
 @import "./components/modal";
-@import "./components/mobile";
 @import "./components/tablet";
+@import "./components/desktop";
+
