--- a/sass/portfolio.scss
+++ b/sass/portfolio.scss
@@ -3,13 +3,15 @@
 @import "./utils/mixins.scss";
 @import "./base/common";
 @import "./components/button";
+@import "./components/menu-button";
 @import "./components/social";
 @import "./components/logo";
 @import "./components/header";
 @import "./components/navi";
 @import "./components/portfolio";
 @import "./components/footer";
-@import "./components/mobile";
 @import "./components/tablet";
+@import "./components/desktop";
+
 
 
