--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -1,4 +1,4 @@
-.portfolio-list, .header-spacer, .header__container {
+.header-spacer, .header__container {
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -24,7 +24,7 @@ body {
 }
 
 div.container {
-  width: 1200px;
+  width: 100%;
   padding: 0 15px;
   margin: 0 auto;
 }
@@ -87,6 +87,54 @@ button > span {
   margin-top: 30px;
 }
 
+.menu-button {
+  width: 24px;
+  height: 24px;
+  position: relative;
+  z-index: 10;
+  overflow: hidden;
+  border: none;
+  background: transparent;
+  cursor: pointer;
+  margin-right: 22px;
+  border-bottom: 3px solid #000000;
+  display: block;
+}
+
+.menu-button:before,
+.menu-button:after {
+  content: "";
+  width: 24px;
+  height: 3px;
+  position: absolute;
+  transform: translate(-50%, -50%);
+  background-color: #000000;
+  transition: transform 0.5s;
+}
+
+.menu-button:before {
+  top: 30%;
+}
+
+.menu-button:after {
+  top: 68%;
+}
+
+/* Change menu icon */
+.menu-button.active {
+  border-bottom: none;
+}
+
+.menu-button.active:before {
+  top: 50%;
+  transform: translate(-50%, 0%) rotate(45deg);
+}
+
+.menu-button.active:after {
+  top: 50%;
+  transform: translate(-50%, 0%) rotate(-45deg);
+}
+
 .social-list {
   gap: 10px;
 }
@@ -147,7 +195,7 @@ button > span {
 }
 
 .header {
-  padding: 25px 0;
+  padding: 15px 0;
   border-bottom: #ECECEC 1px solid;
 }
 .header-contact {
@@ -157,7 +205,7 @@ button > span {
   font-weight: 500;
   font-family: Roboto;
   word-wrap: break-word;
-  display: flex;
+  display: none;
   -moz-column-gap: 50px;
        column-gap: 50px;
 }
@@ -188,16 +236,39 @@ button > span {
   font-family: Roboto;
   word-wrap: break-word;
   color: #212121;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  background-color: #FFEFBA;
+  transform: translateY(-100%);
+  transition: transform 0.5s;
+}
+.navigation__link {
+  color: #222;
+  font-size: 20px;
+  font-family: Arial, Helvetica, sans-serif;
+  text-decoration: none;
+}
+
+.navigation.active {
+  transform: translateY(0);
+  z-index: 5;
 }
 
 .navigation-list {
   display: flex;
+  flex-direction: column;
+  gap: 50px;
+  padding-top: 50px;
+  padding-bottom: 50px;
+  font-size: 24px;
 }
 .navigation-list__item {
   margin-left: 50px;
 }
 .navigation-list__link {
-  font-size: 14px;
+  font-size: 24px;
   letter-spacing: 0.28px;
   line-height: normal;
   font-weight: 500;
@@ -230,7 +301,7 @@ button > span {
   color: #2196F3;
 }
 .navigation-list__item--active .navigation-list__link::after {
-  width: 100%;
+  width: 0;
 }
 
 @keyframes navigation_underline {
@@ -251,7 +322,7 @@ button > span {
   }
 }
 .portfolio {
-  padding: 95px 0;
+  padding: 60px 0;
 }
 .portfolio__filters {
   padding-bottom: 51px;
@@ -260,6 +331,7 @@ button > span {
   display: flex;
   -moz-column-gap: 8px;
        column-gap: 8px;
+  flex-wrap: wrap;
 }
 
 @keyframes overlay_show {
@@ -281,6 +353,10 @@ button > span {
 }
 .portfolio-list {
   flex-wrap: wrap;
+  display: flex;
+  justify-content: space-between;
+  align-items: normal;
+  flex-direction: column;
   margin: 0 auto;
   row-gap: 30px;
 }
@@ -350,8 +426,16 @@ button > span {
   display: flex;
 }
 
+.footer__container {
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  gap: 60px;
+}
+
 .footer-contacts {
-  flex-basis: 25%;
+  text-align: center;
+  flex-basis: 100%;
 }
 .footer-contacts__logo--studio {
   color: white;
@@ -365,6 +449,7 @@ button > span {
   font-family: Roboto;
   word-wrap: break-word;
   color: rgba(255, 255, 255, 0.6);
+  text-align: center;
 }
 .address__city {
   color: white;
@@ -372,7 +457,8 @@ button > span {
 }
 
 .footer-join {
-  flex-basis: 25%;
+  text-align: center;
+  flex-basis: 100%;
 }
 .footer-join__title {
   font-size: 14px;
@@ -387,7 +473,9 @@ button > span {
 }
 
 .footer-subscribe {
-  flex-basis: 50%;
+  text-align: center;
+  flex-basis: 100%;
+  width: 100%;
 }
 .footer-subscribe__title {
   font-size: 14px;
@@ -403,6 +491,9 @@ button > span {
 .footer-form {
   margin-top: 20px;
   display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 20px;
 }
 .footer-form__input {
   font-size: 16px;
@@ -416,6 +507,8 @@ button > span {
   margin-right: 12px;
   color: rgba(255, 255, 255, 0.6);
   flex-basis: 60%;
+  width: 100%;
+  margin-right: 0;
 }
 .footer-form__svg {
   width: 20px;
@@ -423,219 +516,44 @@ button > span {
   fill: white;
 }
 
-.menu-button {
-  display: none;
-}
-
-@media screen and (max-width: 767px) {
-  div.container {
-    width: 100%;
-  }
-  .header {
-    padding: 15px 0;
-  }
-  .header-contact {
-    display: none;
-  }
-  .menu-button {
-    width: 24px;
-    height: 24px;
-    position: relative;
-    z-index: 10;
-    overflow: hidden;
-    border: none;
-    background: transparent;
-    cursor: pointer;
-    margin-right: 22px;
-    border-bottom: 3px solid #000000;
-    display: block;
-  }
-  .menu-button:before,
-  .menu-button:after {
-    content: "";
-    width: 24px;
-    height: 3px;
-    position: absolute;
-    transform: translate(-50%, -50%);
-    background-color: #000000;
-    transition: transform 0.5s;
-  }
-  .menu-button:before {
-    top: 30%;
-  }
-  .menu-button:after {
-    top: 68%;
-  }
-  /* Change menu icon */
-  .menu-button.active {
-    border-bottom: none;
-  }
-  .menu-button.active:before {
-    top: 50%;
-    transform: translate(-50%, 0%) rotate(45deg);
-  }
-  .menu-button.active:after {
-    top: 50%;
-    transform: translate(-50%, 0%) rotate(-45deg);
-  }
-  .navigation {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    background-color: #FFEFBA;
-    transform: translateY(-100%);
-    transition: transform 0.5s;
-  }
-  .navigation__link {
-    color: #222;
-    font-size: 20px;
-    font-family: Arial, Helvetica, sans-serif;
-    text-decoration: none;
-  }
-  .navigation.active {
-    transform: translateY(0);
-    z-index: 5;
-  }
-  .navigation-list {
-    display: flex;
-    flex-direction: column;
-    gap: 50px;
-    padding-top: 50px;
-    padding-bottom: 50px;
-    font-size: 24px;
-  }
-  .navigation-list__item--active .navigation-list__link::after {
-    width: 0;
-  }
-  .navigation-list__link {
-    font-size: 24px;
-  }
-  .hero {
-    padding: 125px 0;
-  }
-  .hero__title {
-    font-size: 26px;
-    letter-spacing: 6%;
-    line-height: 1.61;
-    font-weight: 900;
-  }
-  .feature {
-    padding: 60px 0;
-  }
-  .feature-list {
-    flex-direction: column;
-    gap: 40px;
-  }
-  .feature-list__item {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-  }
-  .feature-list__item::before {
-    width: 100%;
-  }
-  .box {
-    display: none;
-  }
-  .team {
-    padding: 60px 0;
-  }
-  .team__main-title {
-    font-size: 28px;
-    letter-spacing: 0.84px;
-    line-height: normal;
-    font-weight: 700;
-    margin-bottom: 28px;
-  }
-  .team-list {
-    display: flex;
-    justify-content: space-between;
-    flex-direction: column;
-    gap: 30px;
-  }
-  .team-list__img {
-    width: 100%;
-  }
-  .clients {
-    padding: 60px 0;
-  }
-  .clients__title {
-    font-size: 28px;
-    letter-spacing: 0.84px;
-    line-height: normal;
-    font-weight: 700;
-    margin-bottom: 28px;
-  }
-  .clients-list {
-    flex-wrap: wrap;
-  }
-  .footer__container {
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    gap: 60px;
-  }
-  .address {
-    text-align: center;
-  }
-  .footer-contacts,
-  .footer-subscribe,
-  .footer-join {
-    text-align: center;
-    flex-basis: 100%;
-  }
-  .footer-subscribe {
-    width: 100%;
-  }
-  .footer-form {
-    flex-direction: column;
-    align-items: center;
-    gap: 20px;
-  }
-  .footer-form__input {
-    width: 100%;
-    margin-right: 0;
-  }
-  .modal-form {
-    width: 98%;
-    min-width: 320px;
-  }
-  .modal-form__header {
-    text-align: center;
-    line-height: 30px;
-    letter-spacing: 0.6px;
-  }
-  .modal-form__checkbox-text {
-    font-size: 12px;
-    letter-spacing: 0.36px;
-    display: inline;
-    vertical-align: middle;
-  }
-  .portfolio {
-    padding: 60px 0;
-  }
-  .portfolio-list {
-    display: flex;
-    flex-direction: column;
-    align-items: normal;
-  }
-  .portfolio__filters-list {
-    display: flex;
-    flex-wrap: wrap;
-  }
-}
 @media screen and (min-width: 768px) and (max-width: 1200px) {
-  div.container {
-    width: 100%;
+  .menu-button {
+    display: none;
   }
   .header {
     padding: 18px 0;
   }
   .header-contact {
+    display: flex;
     flex-direction: column;
     gap: 10px;
+  }
+  .navigation {
+    font-size: 14px;
+    letter-spacing: 0.28px;
+    line-height: normal;
+    font-weight: 500;
+    font-family: Roboto;
+    word-wrap: break-word;
+    color: #212121;
+    position: relative;
+    width: unset;
+    background-color: unset;
+    transform: unset;
+    transition: unset;
+  }
+  .navigation-list {
+    flex-direction: row;
+    gap: 0;
+    padding-top: 0;
+    padding-bottom: 0;
+    font-size: inherit;
+  }
+  .navigation-list__item--active .navigation-list__link::after {
+    width: 100%;
+  }
+  .navigation-list__link {
+    font-size: 14px;
   }
   .hero {
     padding: 100px;
@@ -650,10 +568,13 @@ button > span {
     padding: 60px 0;
   }
   .feature-list {
+    flex-direction: row;
     flex-wrap: wrap;
+    gap: 30px;
   }
   .feature-list__item {
     flex-basis: calc((100% - 30px) / 2);
+    display: block;
   }
   .feature-list__item::before {
     width: 100%;
@@ -672,8 +593,10 @@ button > span {
     letter-spacing: 0.84px;
     line-height: normal;
     font-weight: 600;
+    margin-bottom: 50px;
   }
   .team-list {
+    flex-direction: row;
     flex-wrap: wrap;
     gap: 30px;
   }
@@ -704,6 +627,9 @@ button > span {
     width: 100%;
   }
   .footer__container {
+    justify-content: unset;
+    align-items: unset;
+    flex-direction: unset;
     flex-wrap: wrap;
     gap: 60px;
   }
@@ -720,6 +646,7 @@ button > span {
   }
   .footer-subscribe {
     flex-basis: 100%;
+    width: unset;
   }
   .footer-subscribe__title {
     text-align: center;
@@ -732,29 +659,193 @@ button > span {
   }
   .footer-form__input {
     width: 450px;
+    margin-right: unset;
   }
   .modal-form {
     min-width: 450px;
+    width: unset;
   }
   .modal-form__header {
     text-align: center;
-    line-height: 30px;
-    letter-spacing: 0.6px;
     font-family: "Roboto";
+    font-size: 20px;
+    letter-spacing: 0.6;
+    line-height: normal;
+    font-weight: 700;
   }
   .modal-form__checkbox-text {
-    font-size: 12px;
-    letter-spacing: 0.36px;
     display: inline;
     vertical-align: middle;
+    font-size: 12px;
+    letter-spacing: normal;
+    line-height: 0.36;
+    font-weight: 400;
   }
   .portfolio {
     padding: 60px 0;
   }
+  .portfolio__filters-list {
+    flex-wrap: unset;
+  }
   .portfolio__filters {
     padding-bottom: 30px;
   }
+  .portfolio-list {
+    flex-direction: row;
+    align-items: center;
+  }
   .portfolio-list__item {
     flex-basis: calc((100% - 60px) / 2);
+  }
+}
+@media screen and (min-width: 1200px) {
+  div.container {
+    width: 1200px;
+  }
+  .menu-button {
+    display: none;
+  }
+  .header {
+    padding: 25px 0;
+  }
+  .header-contact {
+    display: flex;
+  }
+  .navigation {
+    font-size: 14px;
+    letter-spacing: 0.28px;
+    line-height: normal;
+    font-weight: 500;
+    font-family: Roboto;
+    word-wrap: break-word;
+    color: #212121;
+    position: relative;
+    width: unset;
+    background-color: unset;
+    transform: unset;
+    transition: unset;
+  }
+  .navigation-list {
+    flex-direction: row;
+    gap: 0;
+    padding-top: 0;
+    padding-bottom: 0;
+    font-size: inherit;
+  }
+  .navigation-list__item--active .navigation-list__link::after {
+    width: 100%;
+  }
+  .navigation-list__link {
+    font-size: 14px;
+  }
+  .hero {
+    padding: 200px 0;
+  }
+  .hero__title {
+    font-size: 44px;
+    letter-spacing: 2.64px;
+    line-height: 1.36;
+    font-weight: 900;
+  }
+  .feature {
+    padding: 94px 0;
+  }
+  .feature-list {
+    flex-direction: row;
+    gap: 30px;
+  }
+  .feature-list__item {
+    display: block;
+  }
+  .feature-list__item::before {
+    width: 270px;
+  }
+  .box {
+    display: block;
+  }
+  .team {
+    padding: 94px 0;
+  }
+  .team__main-title {
+    font-size: 36px;
+    letter-spacing: 1.08px;
+    line-height: normal;
+    font-weight: 700;
+    margin-bottom: 50px;
+  }
+  .team-list {
+    flex-direction: row;
+  }
+  .clients {
+    padding-top: 73px;
+    padding-bottom: 94px;
+  }
+  .clients__title {
+    font-size: 36px;
+    letter-spacing: 1.08px;
+    line-height: normal;
+    font-weight: 700;
+    margin-bottom: 50px;
+  }
+  .clients-list {
+    flex-wrap: unset;
+  }
+  .footer__container {
+    justify-content: unset;
+    align-items: unset;
+    flex-direction: unset;
+    gap: unset;
+  }
+  .address {
+    text-align: unset;
+  }
+  .footer-contacts {
+    flex-basis: 25%;
+    text-align: left;
+  }
+  .footer-subscribe {
+    flex-basis: 50%;
+    text-align: left;
+  }
+  .footer-join {
+    flex-basis: 25%;
+    text-align: left;
+  }
+  .footer-subscribe {
+    width: unset;
+  }
+  .footer-form {
+    flex-direction: row;
+    align-items: unset;
+  }
+  .footer-form__input {
+    width: unset;
+    margin-right: unset;
+  }
+  .modal-form {
+    width: unset;
+    min-width: 400px;
+  }
+  .modal-form__header {
+    font-size: 20px;
+    letter-spacing: 1.5;
+    line-height: normal;
+    font-weight: 700;
+  }
+  .modal-form__checkbox-text {
+    font-size: 14px;
+    letter-spacing: 0.7px;
+    line-height: 1.71;
+    font-weight: 400;
+  }
+  .portfolio {
+    padding: 94px 0;
+  }
+  .portfolio__filters-list {
+    flex-wrap: unset;
+  }
+  .portfolio-list {
+    flex-direction: row;
+    align-items: center;
   }
 }/*# sourceMappingURL=portfolio.css.map */
