--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -1,3 +1,5 @@
+
+
 .footer {
     padding: 60px 0;
     background-color: $footer-back;
@@ -7,9 +9,18 @@
     }
 
 }
+.footer__container {
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    gap: 60px;
+}
+
 
 .footer-contacts {
-    flex-basis: 25%;
+    
+    text-align: center;
+    flex-basis: 100%;
 
     &__logo--studio {
         color: $white;
@@ -20,6 +31,7 @@
     @include font4 (14px, normal, 1.71, 400);
     @include font2(Roboto, break-word);
     color: $address-color;
+    text-align: center;
     
 
     &__city {
@@ -29,7 +41,8 @@
 }
 
 .footer-join {
-    flex-basis: 25%;
+    text-align: center;
+    flex-basis: 100%;
 
     &__title {
         @include font4(14px, normal, normal, 700);
@@ -42,8 +55,9 @@
 }
 
 .footer-subscribe {
-    flex-basis: 50%;
-
+    text-align: center;
+    flex-basis: 100%;
+    width: 100%;
     &__title {
         @include font4(14px, normal, normal, 700);
         @include font2(Roboto, break-word);
@@ -57,6 +71,10 @@
     margin-top: 20px;
     display: flex;
 
+    flex-direction: column;
+        align-items: center;
+        gap: 20px;
+
 
     &__input {
         @include font4(16px, normal, 1.25, normal);
@@ -67,6 +85,8 @@
         margin-right: 12px;
         color: $input-color;
         flex-basis: 60%;
+        width: 100%;
+        margin-right: 0;
     }
 
 
