--- a/sass/components/_navi.scss
+++ b/sass/components/_navi.scss
@@ -2,17 +2,42 @@
     @include font4(14px, 0.28px, normal, 500);
     @include font2(Roboto, break-word);
     color: $gray-text;
+
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    background-color: #FFEFBA;
+    transform: translateY(-100%);
+    transition: transform 0.5s;
+
+    &__link {
+        color: #222;
+        font-size: 20px;
+        font-family: Arial, Helvetica, sans-serif;
+        text-decoration: none;
+    }
+}
+
+.navigation.active {
+    transform: translateY(0);
+    z-index: 5;
 }
 
 .navigation-list {
     display: flex;
+    flex-direction: column;
+        gap: 50px;
+        padding-top: 50px;
+        padding-bottom: 50px;
+        font-size: 24px;
 
     &__item {
         margin-left: 50px;
     }
 
     &__link {
-        @include font4(14px, 0.28px, normal, 500);
+        @include font4(24px, 0.28px, normal, 500);
         @include font2(Roboto, break-word);
         position: relative;
         transition-property: color;
@@ -39,15 +64,17 @@
         &:hover {
             color: $blue-back;
         }
-    } 
+    }
+
     &__item--active {
         color: $blue-back;
     }
+
     &__item--active &__link::after {
-       width: 100%;
+        width: 0;
     }
 
-    
+
 }
 
 @keyframes navigation_underline {
