--- a/sass/components/_menu-button.scss
+++ b/sass/components/_menu-button.scss
@@ -1,6 +1,3 @@
-
-
-
 .menu-button {
     width: 24px;
     height: 24px;
@@ -14,6 +11,10 @@
     border-bottom: 3px solid #000000;
     display: block;
 
+    &:hover {
+        border-bottom: 3px solid $blue-back;
+    }
+
 }
 
 .menu-button:before,
@@ -25,6 +26,13 @@
     transform: translate(-50%, -50%);
     background-color: #000000;
     transition: transform 0.5s;
+
+
+}
+
+.menu-button:hover:before,
+.menu-button:hover:after {
+    border-bottom: 3px solid $blue-back;
 }
 
 .menu-button:before {
@@ -38,6 +46,8 @@
 /* Change menu icon */
 .menu-button.active {
     border-bottom: none;
+    position: fixed;
+    right: 20px;
 }
 
 .menu-button.active:before {
