--- a/sass/components/desktop/_desktop.navigation.scss
+++ b/sass/components/desktop/_desktop.navigation.scss
@@ -21,6 +21,10 @@
     font-size: inherit;
 
 
+    &__item {
+        margin-left: 50px;
+      }
+
     &__item--active &__link::after {
         width: 100%;
     }
@@ -28,4 +32,7 @@
     &__link {
         font-size: 14px;
     }
+}
+.navigation-contact-list, .navigation-social-list {
+    display: none;
 }
