fix header-height for tablets and desktops

--- a/css/main.css
+++ b/css/main.css
@@ -903,6 +903,9 @@ button > span {
   .navigation-contact-list, .navigation-social-list {
     display: none;
   }
+  .navigation.active {
+    min-height: unset;
+  }
   .hero {
     padding: 100px;
   }
@@ -1091,6 +1094,9 @@ button > span {
   }
   .navigation-contact-list, .navigation-social-list {
     display: none;
+  }
+  .navigation.active {
+    min-height: unset;
   }
   .hero {
     padding: 200px 0;
